<resources xmlns:https="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Dignity Memorial</string>
    <string name="dialog_yes_btn">Yes</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="dialog_no_btn">No</string>
    <string name="emptyview_no_results">Sorry, there are no results to display</string>
    <string name="emptyview_no_internet_connection">
        There doesn\'t appear to be an internet connection.
        \nPlease check your connection</string>
    <string name="search_obituaries">Search Obituaries</string>
    <string name="search_providers">Search Providers</string>
    <string name="checklist">\'Things to Remember\' Checklist</string>
    <string name="start_planning_service">Start Planning a Service</string>
    <string name="find_site">Find a loved one\'s site</string>
    <string name="bill_pay">Bill Pay</string>
    <string name="faqs">FAQs</string>
    <string name="toolbar_image_cd">Image of a white funeral wreath under weeping willows</string>
    <string name="toolbar_logo_cd">Dignity Memorial logo</string>
    <string name="scrolling_menu_cd">Scrolling options menu</string>
    <string name="fragment_plan_tv_cd">Create, save and share your event plan here</string>
    <string name="add_button_cd">Add %1s option to plan</string>
    <string name="details_button_cd">Details for %1s option</string>
    <string name="obituary_view_cd">Obituary listing for %1s</string>
    <string name="provider_view_cd">Provider listing for %1s</string>
    <string name="pref_settings" translatable="false">View User Settings</string>
    <string name="menu_view_pref_settings" translatable="false">View User Settings</string>
    <string name="view_plan_selections">View Plan Selections</string>
    <string name="view_saved_plan">View Plan Selections</string>
    <string name="menu_share"><u>Share Your Plan</u></string>
    <string name="share_msg_body_text">
        Hello: Here is the plan I created with Dignity Memorial&#8482;\'s
        \nThe Dignity Planner&#8482; to honor our recently departed loved one: Ceremony Location: %1s
    </string>
    <string name="share_app_chooser_dialog_title">Share your plan via:</string>
    <string name="dm_notifications_title">Dignity Memorial</string>
    <string name="dm_notifications_body_text">You have an upcoming consultation with Dignity Memorial.</string>
    <string name="dm_notifications_body_tap_text">Tap to add event to calendar</string>
    <string name="plan_entry_creation_successful">New plan creation successful</string>
    <string name="error_creating_plan">Error creating plan</string>
    <string name="create_new_plan">Create a New Plan</string>
    <string name="start_planning_btn">Start Planning</string>
    <string name="widget_emptyview_text">
        You have no events or plans with us.
        \nTap to open the app to start today.
    </string>
    <string name="sample_notif_cal_event_title">Planning Consultation with Dignity Memorial</string>
    <string name="sample_notif_cal_event_desc">Contact: John Smith</string>
    <string name="sample_notif_cal_event_loc">Resthaven Funeral Home</string>
    <string name="saved_zip_codes">Saved ZIP codes</string>
    <string name="saved_providers">Saved providers</string>
    <string name="saved_plans">Saved plans</string>
    <string name="pref_zip_code_label" translatable="false">Saved ZIP code</string>
    <string name="pref_zip_code_key" translatable="false">ZIP code</string>
    <string name="pref_zip_code_default" translatable="false">33884</string>
    <string name="pref_provider_label" translatable="false">Saved provider</string>
    <string name="pref_provider_key" translatable="false">Provider</string>
    <string name="contact_email_label">Contact E-mail</string>
    <string name="contact_plan_name_label">Plan Name</string>
    <string name="ceremony_selection_label">Ceremony Selection</string>
    <string name="visitation_selection_label">Visitation Selection</string>
    <string name="reception_selection_label">Reception Selection</string>
    <string name="site_cremation_label">Burial Site/Cremation Niche</string>
    <string name="container_selection_label">Urn/Casket</string>
    <string name="plan_summary_intro">These are your selections for plan: %1s</string>
    <string name="ceremony_selection">%1s</string>
    <string name="visitation_selection">%1s</string>
    <string name="reception_selection">%1s</string>
    <string name="site_selection">%1s</string>
    <string name="container_selection">%1s</string>
    <string name="est_cost">Estimated Cost: %2d</string>
    <string name="plan_page_description">Create-a-plan page</string>
    <string name="details_button">Details</string>
    <string name="undecided">Undecided</string>
    <string name="burial">Burial</string>
    <string name="cremation">Cremation</string>
    <string name="search_form_headng">Search for Obituaries and Providers</string>
    <string name="plan_form_heading">Create a Plan</string>
    <string name="obit_search_first_name">First Name</string>
    <string name="obit_search_last_name">Last Name</string>
    <string name="provider_zip_code">Enter ZIP code</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="start_obits_search_btn">Start Obituary Search</string>
    <string name="start_provider_search_btn">Start Provider Search</string>
    <string name="no_valid_entries_present_error_msg">Sorry, there are no completed fields present
        and \"Use current location\" was not selected.
        Provider searches require either a zip code or a click on \"Use current Location.\"</string>
    <string name="save_zip_code_dialog_msg">Would you like to save this zip code to your app settings?
        This allows you to conduct this search later and
        to set the nearest provider as a preferred provider.</string>
    <string name="search_form_first_name_label">first name:</string>
    <string name="search_form_last_name_label">last name:</string>
    <string name="search_form_zipcode_field_label">Enter a zip code:</string>
    <string name="get_directions">Get directions</string>
    <string name="obits_search_query_suffix">
         <![CDATA[&countryid=1&stateid=0&affiliateid=-1]]>
    </string>
    <string name="provider_search_query_suffix">
         <![CDATA[&brand=DM&locale=EN&startPage=1&recordsPerPage=50&radius=100&isClickTracking=false]]></string>
    <string name="save_provider">Save Provider</string>
    <string name="error_inserting_plan">Error creating plan entry</string>
    <string name="insert_plan_successful">Plan entry created successfully</string>
    <string name="error_updating_plan">Error updating plan</string>
    <string name="update_plan_successful">Plan updated successfully</string>
    <string name="error_deleting_plan">Error deleting plan</string>
    <string name="plan_deletion_successful">Plan deleted successfully</string>
    <string name="error_deleting_plans_table">Error deleting plan table</string>
    <string name="plan_table_deletion_successful">Plan table deleted successfully</string>
    <string name="error_querying_plan">Error querying plan table</string>
    <string name="sample_details_text">
        If set along with Intent.FLAG_ACTIVITY_NEW_DOCUMENT then the task being launched will not be presented to the user but will instead be only available
        through the recents task list. In addition, the new task wil be affiliated with the
        launching activity\'s task. Affiliated tasks are grouped together in the recents task list.
    </string>
</resources>