<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_access_preferences"
        android:title="@string/pref_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_plan_selections"
        android:title="@string/view_saved_plan"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_white_48dp"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:actionProviderClass=
            "android.widget.ShareActionProvider" />

</menu>