<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/plan_option_cardview"
    card_view:cardElevation="4dp"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="200dp" />
        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="@dimen/add_button_layout_width"
            android:layout_height="@dimen/add_button_layout_height"
            android:layout_below="@id/imageview"
            android:layout_marginTop="@dimen/add_btn_layout_margin_top"
            android:layout_marginBottom="@dimen/add_btn_layout_margin_bottom"
            android:layout_marginLeft="@dimen/add_btn_layout_margin_left"
            android:contentDescription="@string/add_button_cd"
            android:src="@drawable/ic_add_white_48dp"
            android:textColor="@android:color/white"
            android:background="@drawable/add_button"/>

        <Button
            android:id="@+id/details_button"
            android:text="@string/details_button"
            android:textSize="@dimen/details_button_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview"
            android:contentDescription="@string/details_button_cd"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>