<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/provider_cardview"
    card_view:cardElevation="@dimen/result_item_card_elevation"
    android:layout_margin="@dimen/result_item_card_layout_margin"
    card_view:cardCornerRadius="@dimen/result_item_card_corner_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/provider_item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:contentDescription="@string/provider_view_cd">
        <!-- Provider object fields -->
        <TextView
            android:id="@+id/provider_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size" />
        <TextView
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size" />
        <TextView
            android:id="@+id/url"
            android:clickable="true"
            android:textSize="@dimen/medium_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColor="@color/primary_dark"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/provider_get_directions"
            android:text="@string/get_directions"
            android:focusable="false"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getDirections"/>

        <TextView
            android:id="@+id/save_provider"
            android:text="@string/save_provider"
            android:clickable="true"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="saveProviderEntry"/>
    </LinearLayout>
</android.support.v7.widget.CardView>