<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/cv1"
    card_view:cardElevation="4dp"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- this view is shared by search result lists consisting of differently typed Objects
    and thus contains fields for all possible Objects. Visibility is controlled dynamically via the
    activity or fragment -->

    <LinearLayout
        android:id="@+id/obit_object_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/obituary_view_cd">
        <!-- Obituary object fields -->
        <TextView
            android:id="@+id/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/primary_dark"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
        <TextView
            android:id="@+id/obit_preview_text"
            android:textSize="@dimen/medium_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/obit_full_text_link"
            android:clickable="true"
            android:textSize="@dimen/medium_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColor="@color/primary_dark"
            android:textStyle="italic"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/provider_object_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:contentDescription="@string/provider_view_cd">
        <!-- Provider object fields -->
        <TextView
            android:id="@+id/provider_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/url"
            android:clickable="true"
            android:textSize="@dimen/medium_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColor="@color/primary_dark"
            android:textStyle="italic"/>
    </LinearLayout>

    <TextView
        android:id="@+id/provider_get_directions"
        android:text="@string/get_directions"
        android:focusable="false"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getDirections"/>

    <TextView
        android:id="@+id/save_provider"
        android:text="@string/save_provider"
        android:clickable="true"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="saveProviderEntry"/>

</android.support.v7.widget.CardView>